--- a/pop/fly/css/blog/index.css
+++ b/pop/fly/css/blog/index.css
@@ -15,6 +15,10 @@
 	/*text-indent: 2em;*/
 }
 
+.content p.pre {
+	white-space: pre-wrap;
+}
+
 .blog-item .end {
 	color: gray;
 }
